bonus/confs/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: gitlab.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default # Service to forward request to
            port:
              number: 8181 # Port on wich the Service is exposed to access by the Ingress
